[project]
name = "pd4web"
version = "3.1.8"
description = "pd4web is a tool that compiles PureData patches with external objects for Wasm."
authors = [{ name = "Charles K. Neimog", email = "charlesneimog@outlook.com" }]
readme = "README.md"
requires-python = ">=3.11"

[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "build"
wheel.packages = ["pd4web"]
wheel.py-api = "cp311"
cmake.args = [
  "-DPD_PD4WEB_BUILD=ON",
  "-DPY_PD4WEB_BUILD=ON",
  "-DCMAKE_OSX_DEPLOYMENT_TARGET=10.15",
  "-DCMAKE_OSX_ARCHITECTURES=x86_64;arm64",
  "-DPD_OUTPUT_PATH=./pd4web",
  "-DPD_LIB_DIR=./",
]

[project.scripts]
pd4web = "pd4web:main"
